Fix code overflow

--- a/style.css
+++ b/style.css
@@ -98,9 +98,10 @@ video {
 	border-radius: 10px;
 }
 
-details.code {
+.code {
 	font-family: "consolas", monospace;
 	background-color: #DACFC6;
+	color: #302020;
 	border-radius: 10px;
 	margin: 20px 0px;
 }
@@ -108,28 +109,18 @@ details summary {
 	padding: 15px;
 }
 details[open] summary {
-	box-shadow: 0px 10px 10px -10px #8A6868;
+	box-shadow: 0px 9px 10px -10px #8A6868;
 }
 
 pre {
 	font-family: "consolas", monospace;
-	color: #302020;
 	tab-size: 4;
+	overflow: auto;
+	padding: 10px;
 }
 details pre {
 	padding: 10px;
 	margin: 0px;
-	overflow: auto;
-}
-.code {
-	font-family: "consolas", monospace;
-	background-color: #DACFC6;
-	color: #302020;
-}
-pre.code {
-	padding: 10px;
-	margin: 20px 0px;
-	border-radius: 10px;
 }
 details pre.code {
 	background-color: #00000000;
@@ -139,6 +130,10 @@ span.code {
 	border-radius: 5px;
 	margin: 0px;
 	display: inline-block;
+}
+div.code {
+	overflow-wrap: break-word;
+	padding: 10px;
 }
 pre .comment { color: rgb(150,100,0); }
 
